Update gallery and contact image file to webp format

--- a/picture-gallery.html
+++ b/picture-gallery.html
@@ -49,17 +49,17 @@
         <section id="gallery">
             <h2 class="hidden-heading">Picture-Gallery</h2>
             <div id="photos">
-                <img src="assets/images/gallery/boy-library.jpg" alt="Smiling boy in red cap in library">
-                <img src="assets/images/gallery/boys-classroom.jpg" alt="Three students raise hand in a classroom">
-                <img src="assets/images/gallery/children-classroom.jpg" alt="Four students writing in a class room with a teacher">
-                <img src="assets/images/gallery/girl-learn-online.jpg" alt="A girl lerning online holding alphabet cards">
-                <img src="assets/images/gallery/girl-red-dress.jpg" alt="Smiling girl in a red dress in a library">
-                <img src="assets/images/gallery/girl-yellow-dress.jpg" alt="A girl in yellow dress learning alphabets">
-                <img src="assets/images/gallery/smiley-female-teacher.jpg" alt="Smiling female teacher with 3 students in a classroom">
-                <img src="assets/images/gallery/smiley-male-teacher.jpg" alt="Smiling male teacher holding a book">
-                <img src="assets/images/gallery/smiling-boy.jpg" alt="Smiling boy in front of a whiteboard">
-                <img src="assets/images/gallery/teeange-girl.jpg" alt="Smiling teenager girl wearing ornage headphone">
-                <img src="assets/images/gallery/two-smiley-boys.jpg" alt="Two boys holding a book over their heads and smiling">
+                <img src="assets/images/gallery/boy-library.webp" alt="Smiling boy in red cap in library">
+                <img src="assets/images/gallery/boys-classroom.webp" alt="Three students raise hand in a classroom">
+                <img src="assets/images/gallery/children-classroom.webp" alt="Four students writing in a class room with a teacher">
+                <img src="assets/images/gallery/girl-learn-online.webp" alt="A girl lerning online holding alphabet cards">
+                <img src="assets/images/gallery/girl-red-dress.webp" alt="Smiling girl in a red dress in a library">
+                <img src="assets/images/gallery/girl-yellow-dress.webp" alt="A girl in yellow dress learning alphabets">
+                <img src="assets/images/gallery/smiley-female-teacher.webp" alt="Smiling female teacher with 3 students in a classroom">
+                <img src="assets/images/gallery/smiley-male-teacher.webp" alt="Smiling male teacher holding a book">
+                <img src="assets/images/gallery/smiling-boy.webp" alt="Smiling boy in front of a whiteboard">
+                <img src="assets/images/gallery/teenage-girl.webp" alt="Smiling teenager girl wearing ornage headphone">
+                <img src="assets/images/gallery/two-smiley-boys.webp" alt="Two boys holding a book over their heads and smiling">
             </div>
         </section>
     </main>
