Add thining kid image to image-readme folder

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                     </h2>
                     <div id="testimonials-content-container">
                         <div class="testimonials">
-                            <p class="testimonials-text">"For three years, we have enrolled our kids in the Kids English
+                            <p class="testimonials-text">"For two years, we have enrolled our kids in the Kids English
                                 Club. We choose KEC because our kids can focus on speaking, reading,
                                 and writing in a native English language environment."</p>
                             <p class="writer">Jo Blog, 2023</p>
