--- a/courses-detail.html
+++ b/courses-detail.html
@@ -49,7 +49,7 @@
         <div id="coming-soon">
             <h1 class="white">Coming Soon!</h1>
             <p class="white">Stay tuned with us</p>
-            <a class="back-to-home" href="index.html"><h5 class="hover-effect">Back to Home</h5></a>
+            <a class="back-to-previous" href="index.html#courses"><h5 class="hover-effect">Back to Courses Overview</h5></a>
         </div>
 
     </main>
