Update back to home to back to contact on acknowlege page

--- a/form-submit-acknowledge.html
+++ b/form-submit-acknowledge.html
@@ -49,7 +49,7 @@
         <div id="coming-soon">
             <h1 class="white">Thank you!</h1>
             <p class="white">Your submission is received and we will contact you soon.</p>
-            <a class="back-to-home" href="index.html"><h5 class="hover-effect">Back to Home</h5></a>
+            <a class="back-to-previous" href="contact.html"><h5 class="hover-effect">Back to Contact</h5></a>
         </div>
     </main>
     <!-- Footer -->
